[package]
name = "blockchain_init"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.51", features = ["full"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
curve25519-dalek = "4.1.3"
bulletproofs = "4.0.0"
merlin = "3.0.0"
ring = "0.17.8"
rand = "0.8.5"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
